Add mysql package and ignore .env.local file

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ArtofBugs/devdynasty-stats#readme",
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "mysql": "^2.18.1"
   }
 }
