--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "devdynasty-stats",
   "version": "0.1.0",
   "description": "Database manager for DevDynasty database backend.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "forever start app.js",
+    "dev": "node app.js",
     "test": "echo 'No tests found.'"
   },
   "repository": {
@@ -18,6 +20,8 @@
   "homepage": "https://github.com/ArtofBugs/devdynasty-stats#readme",
   "dependencies": {
     "dotenv": "^16.4.5",
+"express": "^4.18.2",
+    "forever": "^4.0.3",
     "mysql": "^2.18.1"
   }
 }
