--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "forever start app.js",
-    "dev": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo 'No tests found.'"
   },
   "repository": {
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/ArtofBugs/devdynasty-stats#readme",
   "dependencies": {
     "dotenv": "^16.4.5",
-"express": "^4.18.2",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "forever": "^4.0.3",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
